# local-mlflow-tracking-server-setup

./: .gitignore  Makefile  docker-compose.yaml  pyproject.toml
.envs/: .mlflow-common  .mlflow-dev  .postgres  .tracking-server-example
docker/: Dockerfile  run-server.sh
examples/mlflow-models/: mlflow-pyfunc-example.py  mlflow-tracking-introduction.py  model.py  predict-using-logged-model.py  predict-using-pyfunc-model.py  vectorizer.joblib
examples/mlflow-projects/: README.md
