[tool.poetry]
name = "mlflow-tracking-server"
version = "0.1.0"
description = "MLflow tracking server"
authors = ["Kivanc Yuksel <emkademy@gmail.com>"]
repository="https://github.com/kivancyuksel/mlflow-tracking-server.git"
classifiers= []

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "==1.17.0"
psycopg2-binary = "~=2.8.6"

[build-system]
requires = ["setuptools","poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"


